# 6502Emu

./: 6502Emu.pro  CMakeLists.txt  cpu.cpp  main.cpp  memory_ram.cpp
src/: CMakeLists.txt  aliases.h  cpu.cpp  cpu.h  main.cpp  memory_ram.cpp  memory_ram.h  opcodes.h
tests/: CMakeLists.txt  tst_tests.cpp
